logs/django-wizard-builder.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_nested_admin-3.0.21.dist-info'...
Listing './lib/python3.5/site-packages/django_widget_tweaks-1.4.1.dist-info'...
Listing './lib/python3.5/site-packages/django_wizard_builder-2.5.7.dist-info'...
Listing './lib/python3.5/site-packages/monkeybiz'...
Listing './lib/python3.5/site-packages/nested_admin'...
Listing './lib/python3.5/site-packages/nested_admin/static'...
Listing './lib/python3.5/site-packages/nested_admin/static/nested_admin'...
Listing './lib/python3.5/site-packages/nested_admin/static/nested_admin/dist'...
Listing './lib/python3.5/site-packages/nested_admin/static/nested_admin/src'...
Listing './lib/python3.5/site-packages/nested_admin/static/nested_admin/src/nested-admin'...
Listing './lib/python3.5/site-packages/nested_admin/static/nested_admin/src/vendor'...
Listing './lib/python3.5/site-packages/nested_admin/static/nested_admin/src/vendor/browser-pack'...
Listing './lib/python3.5/site-packages/nested_admin/templates'...
Listing './lib/python3.5/site-packages/nested_admin/templates/nesting'...
Listing './lib/python3.5/site-packages/nested_admin/templates/nesting/admin'...
Listing './lib/python3.5/site-packages/nested_admin/templates/nesting/admin/includes'...
Listing './lib/python3.5/site-packages/nested_admin/templates/nesting/admin/inlines'...
Listing './lib/python3.5/site-packages/nested_admin/templatetags'...
Listing './lib/python3.5/site-packages/nested_admin/tests'...
Listing './lib/python3.5/site-packages/nested_admin/tests/admin_widgets'...
Listing './lib/python3.5/site-packages/nested_admin/tests/gfk'...
Listing './lib/python3.5/site-packages/nested_admin/tests/identical_prefixes'...
Listing './lib/python3.5/site-packages/nested_admin/tests/one_deep'...
Listing './lib/python3.5/site-packages/nested_admin/tests/three_deep'...
Listing './lib/python3.5/site-packages/nested_admin/tests/two_deep'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_monkey_business-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/widget_tweaks'...
Listing './lib/python3.5/site-packages/widget_tweaks/templatetags'...
Listing './lib/python3.5/site-packages/wizard_builder'...
Listing './lib/python3.5/site-packages/wizard_builder/admin'...
Listing './lib/python3.5/site-packages/wizard_builder/fixtures'...
Listing './lib/python3.5/site-packages/wizard_builder/management'...
Listing './lib/python3.5/site-packages/wizard_builder/management/commands'...
Listing './lib/python3.5/site-packages/wizard_builder/migrations'...
Listing './lib/python3.5/site-packages/wizard_builder/templates'...
Listing './lib/python3.5/site-packages/wizard_builder/templates/wizard_builder'...
Listing './lib/python3.5/site-packages/wizard_builder/templatetags'...
Listing './lib/python3.5/site-packages/wizard_builder/tests'...
Listing './lib/python3.5/site-packages/wizard_builder/tests/test_app'...
Listing './lib/python3.5/site-packages/wizard_builder/tests/test_app/migrations'...
Listing './lib/python3.5/site-packages/wizard_builder/tests/test_app/static'...
Compiling './lib/python3.5/site-packages/wizard_builder/tests/test_models.py'...
***   File "./lib/python3.5/site-packages/wizard_builder/tests/test_models.py", line 107
    Choice.objects.create(text=f"choice {i}", question=model)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wizard_builder/widgets.py'...
***   File "./lib/python3.5/site-packages/wizard_builder/widgets.py", line 13
    return f'choice_{pk}'
                        ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
